--- a/assets/style.css
+++ b/assets/style.css
@@ -63,11 +63,21 @@
   display: block;
   text-align: left;
 }
+.dropdown-content b {
+  float: none;
+  color: black;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+  text-align: right;
+}
 
 .dropdown-content a:hover {
   background-color: #ddd;
 }
-
+.dropdown-content b:hover {
+  background-color: #ddd;
+}
 .dropdown:hover .dropdown-content {
   display: block;
 }
@@ -77,19 +87,4 @@ body
 
 background-image: url("img/bgBlack.jpg");
 
-}
-#gd {
-background-color: Gold;  
-}
-#be {
-background-color: Blue;  
-}
-#rd {
-background-color: Red;  
-}
-#we {
-}
-#bk {
-color: White ;
-background-color: Black;
 }
